--- a/index.html
+++ b/index.html
@@ -4,32 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name='Description' content="Супер хороший и современный онлайн блог">
+    <meta name='Description' content="Super good and modern online blog">
     <meta name="keywords" content="Super Modern Blog">
-    <title>Super Modern Blog-WebSite</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
+    <title>Super Modern Blog</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-        <h1 class="frame">Super Modern Blog</h1>
-        <div class="Vdivider"></div>
-        <h1 class="frame">Recent Blogs</h1>
+        <h1>Super Modern Blog</h1>
+        <h2>Recent Topics</h2>
     </header>
     <div id="list" class="blogs">
     </div>
     <footer>
-        <h1 class="frame footer">END OF Super Modern Blog</h1>
-        <div class="Hdivider"></div>
+        <h2 class="footer">END OF Super Modern Blog</h2>
+        <hr>
         <div>
             <p class="info">created by Yartsev Oleg</p>
             <p class="info">as Laboratory work #8</p>
         </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="scripts/main.js"></script>
 </body>
 
 </html>
