--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
 
 <body>
     <header>
-        <h1>Super Modern Blog</h1>
+        <h1>Super Modern Blog<span>+</span></h1>
         <h2>Recent Topics</h2>
     </header>
+    <div>
+        <button id="loader">
+            <strong>Load Blogs</strong>
+        </button>
+    </div>
     <div id="list" class="blogs">
     </div>
     <footer>
@@ -23,9 +28,16 @@
         <div>
             <p class="info">created by Yartsev Oleg</p>
             <p class="info">as Laboratory work #8</p>
+            <p class="info">
+                <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                    <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss"
+                        alt="Правильный CSS!" />
+                </a>
+            </p>
         </div>
     </footer>
     <script src="scripts/main.js"></script>
+    <script src="scripts/loader.js"></script>
 </body>
 
 </html>
